--- a/Aufgaben/twitter-qa/src/main/resources/static/forms/Start.html
+++ b/Aufgaben/twitter-qa/src/main/resources/static/forms/Start.html
@@ -1,12 +1,14 @@
 <form class="form-horizontal">
   <div class="form-group">
-  <label class="control-label col-md-4">Inhalt des Tweets:</label>
+    <label class="control-label col-md-4">Inhalt des Tweets:</label>
     <div class="col-md-8">
-      <input type="text"
-             cam-variable-name="content"
-             cam-variable-type="String"
-             required
-             class="form-control" />
+      <input
+        type="text"
+        cam-variable-name="content"
+        cam-variable-type="String"
+        required
+        class="form-control"
+      />
     </div>
   </div>
 </form>
