--- a/Aufgaben/twitter-qa/src/main/resources/static/forms/Start.html
+++ b/Aufgaben/twitter-qa/src/main/resources/static/forms/Start.html
@@ -9,6 +9,15 @@
         required
         class="form-control"
       />
+    </div>    <label class="control-label col-md-4">E-Mail:</label>
+    <div class="col-md-8">
+      <input
+        type="text"
+        cam-variable-name="email"
+        cam-variable-type="String"
+        required
+        class="form-control"
+      />
     </div>
   </div>
 </form>
